istio-manifests/api-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: samples-api
spec:
  gateways:
  - api-gateway
  hosts:
    - "*"    
  http:
  - match:
    - uri: 
        prefix: "/ws"
    route:
    - destination:
        host: ws-echo
        port:
          number: 80
    websocketUpgrade: true    
  - match:
    - uri: 
        prefix: "/helloworld.Greeter/"    
    route:
    - destination:
        host: grpc-greeter
        port:
          number: 80       
  - match:
    - uri: 
        prefix: "/"
    route:
    - destination:
        host: http2-hello
        port:
          number: 80
